# ph-pulse

./: .gitignore  .mcp.json  CLAUDE.md  dev.sh  pyproject.toml  skills-lock.json
.claude/: settings.json
.claude/agents/: api-developer.md  backend-dev.md  backend-reviewer.md  dashboard-dev.md  dashboard-reviewer.md  data-engineer.md  frontend-dev.md  genai-dev.md  genai-reviewer.md  ingestion-dev.md  ingestion-reviewer.md  ml-dev.md  ml-engineer.md  ml-reviewer.md  pipeline-debugger.md  researcher.md  reviewer.md  security-auditor.md  test-runner.md  transforms-dev.md  transforms-reviewer.md
.claude/commands/: document.md  pipeline.md  preflight.md
.claude/skills/bigquery-ops/: SKILL.md
.claude/skills/dbt-workflow/: SKILL.md
.claude/skills/etl-pipeline/: SKILL.md
.claude/skills/fastapi-backend/: SKILL.md
.claude/skills/genai-chat/: SKILL.md
.claude/skills/nextjs-dashboard/: SKILL.md
backend/: main.py
backend/models/: schemas.py
backend/routers/: chat.py  forecast.py  historical_poverty.py  municipal_poverty.py  pipeline.py  poverty.py
backend/services/: bigquery_service.py  chat_service.py  forecast_service.py  historical_poverty_service.py  municipal_poverty_service.py  pipeline_service.py
dashboard/: package-lock.json  package.json
dashboard/src/app/: globals.css  layout.tsx  (+1 more)
genai/: gemini_service.py
ingestion/: run_all.py
ingestion/loaders/: bigquery_loader.py
ingestion/sources/: hdx_municipal_poverty_estimates.py  psa_poverty_families_5yr.py  psa_poverty_incidence_families.py
ml/: write_forecasts.py
transforms/: dbt_project.yml
(+56 files in other folders)
