[project]
name = "ph-pulse"
version = "0.1.0"
description = "Philippine Socioeconomic Data Platform"
requires-python = ">=3.13"
dependencies = [
    "db-dtypes>=1.5.0",
    "dbt-bigquery>=1.10.3",
    "fastapi>=0.135.1",
    "google-cloud-bigquery>=3.40.1",
    "google-cloud-bigquery-storage>=2.36.2",
    "google-generativeai>=0.8.6",
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]
